tools/tests/errors/surf_num_03.ki
# Float modulo by a zero divisor must throw.
discard 7.5 % 0.0
